[package]
name = "uranker"
version = "0.1.0"
authors = ["ClSlaid <cailue@bupt.edu.cn>"]
edition = "2018"

description = "A CLI tool used to pick up top-100 occured "

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.*"
anyhow = "1.0.*"
clap = "2.33.3"
log = "0.4.14"
threadpool = "1.8.1"
