[package]
name = "uranker"
version = "0.1.0"
authors = ["ClSlaid <cailue@bupt.edu.cn>"]
edition = "2018"

description = "URanker is a tiny CLI tool abling to rank top-100 URLs from URL datasets.\nFully written in rust!"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.*"
anyhow = "1.0.*"
clap = "2.33.3"
log = "0.4.14"
threadpool = "1.8.1"
